# crypto-risk-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend.dev  README.md  agent代码骨架.md  agent整体架构.md  docker-compose.yml  main.py  pyproject.toml  事件驱动型加密货币市场风控 Agent 深度设计报告.docx
artifacts/: product-manager-prompt.md
artifacts/risk_model/: latest.joblib
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
grafana/: dashboard.json
scripts/: check_data_coverage.py  check_labels.py  clean_labels.py  download_2024_h2.py  seed_demo_data.py  train_best_params.py  train_from_historical_data.py  train_only.py  train_optuna.py  verify_ml_improvements.py
src/api/: app.py  routes.py
src/core/: config.py  logging.py  proxy.py
src/domain/: models.py
src/evaluation/: offline.py
src/features/: builder.py
src/graph/: agent_tools.py  coordinator.py  nodes.py  orchestrator.py  review_assistants.py  state.py
src/ingestion/: normalizer.py  validator.py
src/market/: candles.py
src/memory/: __init__.py  embedding.py  experience.py  manager.py  reviewer_preference.py  store.py
src/ml/: __init__.py  features.py  historical_data.py  (+4 more)
tests/: test_historical_ml.py  test_market_candles.py  test_memory.py  test_ml_improvements.py  test_normalizer.py  test_offline_evaluation.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_proxy_config.py  test_review_fixes.py  test_risk_model.py  test_rule_engine.py  test_rules.py  test_runtime_quality_api.py  test_simulation_runner.py
(+15 files in other folders)
